--- a/.envrc.example
+++ b/.envrc.example
@@ -1,3 +1,4 @@
 export OPENSSL_INCLUDE_DIR=/usr/local/opt/openssl/include
 export OPENSSL_LIB_DIR=/usr/local/opt/openssl/lib
 export DISCORD_TOKEN=
+export TEST_DISCORD_TOKEN=
