--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,19 @@
 [package]
 name = "rusty-craby"
-version = "0.1.0"
-authors = ["Drew Hutton <drew.business2308@gmail.com>"]
+version = "0.2.0"
+authors = ["Drew Hutton <Yoroshi> <drew.hutton@pm.me>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-serenity = { version = "0.7", default-features = false, features = ["builder", "client", "framework", "gateway", "http", "model", "standard_framework", "utils", "rustls_backend"] }
-reqwest = "0.9.21"
 serde = { version = "1.0", features = ["derive"] }
-serde_yaml = "0.8"
 serde_json = "1.0"
-openssl = { version = "0.10", features = ["vendored"] }
-openssl-probe = "0.1.2"
+reqwest = { version = "0.11", features = ["json"] }
+futures = "0.3"
+tokio = { version = "1.5.0", features = ["full"] }
+twilight-cache-inmemory = "0.3"
+twilight-gateway = "0.3"
+twilight-http = "0.3"
+twilight-model = "0.3"
+twilight-command-parser = "0.3"
+twilight-embed-builder = "0.3"
+twilight-mention = "0.3"
