--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ serde_json = "1.0"
 reqwest = { version = "0.11", features = ["json"] }
 futures = "0.3"
 tokio = { version = "1.5.0", features = ["full"] }
+openssl = { version = "0.10", features = ["vendored"] }
 twilight-cache-inmemory = "0.3"
 twilight-gateway = "0.3"
 twilight-http = "0.3"
@@ -17,3 +18,8 @@ twilight-model = "0.3"
 twilight-command-parser = "0.3"
 twilight-embed-builder = "0.3"
 twilight-mention = "0.3"
+
+[profile.release]
+lto = true
+incremental = false
+opt-level = "z"
